# AgenticAI-Nvidia-Hackathon

./: README.md  pyproject.toml
outputs/: final_memo.md  financial_report.md  legal_report.md  matket_analysis.md  product_and_tech_report.md  sourcing_report.md
src/nvidia_hackathon/: crew.py  main.py
src/nvidia_hackathon/config/: agents.yaml  tasks.yaml
