[project]
name = "nvidia_hackathon"
version = "0.1.0"
description = "nvidia_hackathon using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
nvidia_hackathon = "nvidia_hackathon.main:run"
run_crew = "nvidia_hackathon.main:run"
train = "nvidia_hackathon.main:train"
replay = "nvidia_hackathon.main:replay"
test = "nvidia_hackathon.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
